import java.nio.file.Files
import java.nio.file.NoSuchFileException
import java.nio.file.Paths
import java.time.LocalDateTime

/*
 * Copyright 2016 E-System LLC
 *
 *    Licensed under the Apache License, Version 2.0 (the "License");
 *    you may not use this file except in compliance with the License.
 *    You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *    Unless required by applicable law or agreed to in writing, software
 *    distributed under the License is distributed on an "AS IS" BASIS,
 *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
 */
buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:4.0.0.2929"
    }
}

plugins {
    id "com.github.ben-manes.versions" version "0.44.0"
}

wrapper {
    gradleVersion = '8.1.1'
}

apply from: "build-${profile}.gradle"
apply plugin: 'idea'
apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'groovy'
apply plugin: 'maven-publish'
apply plugin: 'jacoco'

sourceCompatibility = JavaVersion.VERSION_17
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

group = ext.mainGroup
version = ext.mainVersion + (ext.snapshot ? '-SNAPSHOT' : '')

repositories {
    mavenCentral()
    mavenLocal()
}

idea {
    project {
        jdkName = '17.0'
        languageLevel = JavaVersion.VERSION_17
    }
    module {
        downloadJavadoc = false
        downloadSources = false
        inheritOutputDirs = true
        excludeDirs += file('gradle')
        excludeDirs += file('out')
    }
}

def propName = rootProject.name
def fullPath = '/com/eslibs/common'
if (!fullPath.startsWith('/src/main/resources')) {
    fullPath = '/src/main/resources' + fullPath
}
def versionString = "${project.version}"
def filePath = "${project.projectDir}${fullPath}/"
new File(filePath).mkdirs()
try {
    Files.delete(Paths.get(filePath, 'build.properties'))
} catch (NoSuchFileException ignore) {
}
println("Create file for property: ${filePath}")
project.ant.propertyfile(file: "${filePath}build.properties") {
    ant.entry(key: 'name', value: propName)
    ant.entry(key: 'version', value: versionString)
    ant.entry(key: 'date', value: "${LocalDateTime.now().toString()}")
}

jar {
    manifest {
        attributes(
                'Implementation-Version': project.version,
                'Implementation-Vendor': 'E-SYSTEM'
        )
    }
}
javadoc {
    failOnError = false
    options.encoding = 'utf-8'
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
        vendor = JvmVendorSpec.ADOPTIUM
    }
    withSourcesJar()
    withJavadocJar()
}
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}
ext {
    jacksonVersion = "2.14.2"
}
dependencies {
    api "org.apache.commons:commons-lang3:3.12.0"
    api "commons-io:commons-io:2.11.0"
    api 'org.slf4j:slf4j-api:2.0.7'
    api "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
    api 'org.eclipse.angus:angus-mail:2.0.1'

    api "de.svenkubiak:jBCrypt:0.4.3"
    api "org.reflections:reflections:0.10.2"

    compileOnly "org.projectlombok:lombok:1.18.22"
    annotationProcessor "org.projectlombok:lombok:1.18.22"

    testImplementation "org.spockframework:spock-core:2.3-groovy-4.0"
    testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
}

def emailTestEnabled = properties['test_email_server'] != null && properties['test_email_login'] != null && properties['test_email_password'] != null
def emailTestEnabledEs = properties['test_email_server_es'] != null && properties['test_email_login_es'] != null && properties['test_email_password_es'] != null
if (emailTestEnabled || emailTestEnabledEs) {
    test {
        if (emailTestEnabled) {
            systemProperty 'test_email_server', "${test_email_server}"
            systemProperty 'test_email_login', "${test_email_login}"
            systemProperty 'test_email_password', "${test_email_password}"
        }
        if (emailTestEnabledEs) {
            systemProperty 'test_email_server_es', "${test_email_server_es}"
            systemProperty 'test_email_login_es', "${test_email_login_es}"
            systemProperty 'test_email_password_es', "${test_email_password_es}"
        }
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

def sonarAvailable = properties['sonar_url'] != null && properties['sonar_user'] != null && properties['sonar_password'] != null
if (sonarAvailable) {
    apply plugin: 'org.sonarqube'
    sonar {
        properties {
            property "sonar.host.url", "${sonar_url}"
            property "sonar.login", "${sonar_user}"
            property "sonar.password", "${sonar_password}"
        }
    }
}
